tests/compiler/continueTarget1/index.ts
// From `github.com/microsoft/TypeScript/blob/v5.8.3/tests/cases/compiler/continueTarget1.ts`, Apache-2.0 License

target:
  continue target;
//~^ ERROR: A 'continue' statement can only be used within an enclosing iteration statement.
